[package]
name = "knk-canvas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
imageproc = "0.25"
rusttype = "0.9"
ab_glyph = "0.2"
glyph_brush_layout = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"