[package]
name = "knk-canvas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = {version = "0.6", features = ["fs"] }
imageproc = "0.25"
ab_glyph = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
walkdir = "2.5"